--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation Duration */
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -57,6 +60,15 @@ button {
   cursor: pointer;
   border: none;
   outline: none;
+}
+
+/* Section Common */
+
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* Typography */
@@ -150,4 +162,60 @@ p {
   margin: 24px;
   padding: 8px 12px;
   border-radius: var(--size-border-radius);
+}
+
+/* About */
+
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  line-height: 170px;
+  margin: auto;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  color: var(--color-blue)
+}
+
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i {
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(1.25)
+}
+
+.major__title, .major_description {
+  color: var(--color-dark-grey)
+}
+
+.major__description {
+  font-size: var(--font-small)
+}
+
+.job {
+  display: flex;
+  text-align: center;
+}
+
+.job__description {
+  margin: 0 16px;
+}
+
+.job__name, .job__period {
+  color: var(--color-light-grey);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+
+.job__period {
+  font-size: var(--font-micro);
 }
